# EmberEngine

./: .cpplintrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cmakeDebug.bat  cmakeRelease.bat  imgui.ini
.github/workflows/: cmake-multi-platform.yml  runner.yml  static_checks.yml
asteroids/: CMakeLists.txt
asteroids/src/: AsteroidsApp.cpp
asteroids/src/scenes/: GameScene.cpp  GameScene.hpp
editor/: CMakeLists.txt
editor/include/EmberEditor/: ContentBrowser.hpp
editor/src/: EditorApp.cpp  LevelSerializer.cpp  LevelSerializer.hpp
editor/src/EmberEditor/: ContentBrowser.cpp
editor/src/panels/: EditorViewport2D.cpp  EditorViewport2D.hpp  EditorViewport3D.cpp  EditorViewport3D.hpp  FileTree.cpp  FileTree.hpp  InspectorPanel.cpp  InspectorPanel.hpp
engine/: CMakeLists.txt
engine/assets/: basic.fs  basic.vs
engine/include/: Ember.hpp
engine/include/Ember/: EntryPoint.hpp
engine/include/Ember/core/: Application.hpp  Window.hpp
engine/include/Ember/scene/: Scene.hpp
engine/include/EmberEngine/: EmberEngine.hpp
engine/include/EmberEngine/core/: EmberApp.hpp  Time.hpp  Window.hpp
engine/include/EmberEngine/input/: KeyInput.hpp  MouseInput.hpp
engine/include/EmberEngine/math/: Mat4f.hpp  Math.hpp  Quatf.hpp  Vec2f.hpp  Vec3f.hpp
engine/include/EmberEngine/render/: Mesh.hpp  RenderUtils.hpp  Shader.hpp  Vertex.hpp
engine/include/EmberEngine/render/shaders/: BasicShader.hpp
engine/include/EmberEngine/utils/: AssetLoader.hpp
engine/include/sol/: config.hpp  forward.hpp  sol.hpp
engine/src/Ember/core/: Application.cpp  Window.cpp
engine/src/EmberEngine/: EmberEngine.hpp  EntryPoint.hpp
engine/src/EmberEngine/core/: Application.cpp  Application.hpp  EmberApp.cpp  Logger.cpp  Logger.hpp  Time.cpp  Window.cpp
engine/src/EmberEngine/display/: Display.cpp  Display.hpp
engine/src/EmberEngine/input/: KeyInput.cpp  MouseInput.cpp
engine/src/EmberEngine/math/: Mat4f.cpp  Math.cpp  Quat4f.cpp  Vec2f.cpp  Vec3f.cpp
engine/src/EmberEngine/render/: Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Mesh.cpp  RenderEngine.cpp  RenderEngine.hpp  RenderUtils.cpp  Shader.cpp
engine/src/EmberEngine/render/shaders/: BasicShader.cpp
engine/src/EmberEngine/scene/: Scene.hpp  SceneManager.cpp  SceneManager.hpp
engine/src/EmberEngine/utils/: AssetLoader.cpp
framework/: CMakeLists.txt
framework/src/: Application.cpp
framework/src/input/: KeyInput.cpp  KeyListener.cpp
framework/src/render/: Renderer.cpp  Window.cpp
framework/src/utils/: Helper.cpp  Logger.cpp
include/Ember/: Application.hpp  Ember.hpp  EntryPoint.hpp
include/Ember/input/: KeyInput.hpp  KeyListener.hpp
include/Ember/render/: Renderer.hpp  Window.hpp
include/Ember/utils/: Helper.hpp  Logger.hpp
runtime/: CMakeLists.txt
runtime/src/: RuntimeApp.cpp
sandbox/: CMakeLists.txt  config.json  level.map  project.ember  project.lua
sandbox/assets/models/: README.md
sandbox/assets/sounds/: README.md
sandbox/include/: SandboxApp.hpp
sandbox/maps/: level.map
sandbox/src/: SandboxApp.cpp  main.cpp
